# vscode-snakefmt-provider

./: .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  noxfile.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  requirements.in  requirements.txt
.github/: CODEOWNERS
.github/actions/build-vsix/: action.yml
.github/actions/lint/: action.yml
.github/workflows/: codeql-analysis.yml  issue-labels.yml  pr-check.yml  pr-labels.yml  publish.yml  push-check.yml
bundled/tool/: jsonrpc.py  runner.py  server.py  utils.py
src/: editor.ts  errorUtils.ts  extension.ts  platform.ts  snakefmtPath.ts  types.ts
src/common/: constants.ts  python.ts  server.ts  settings.ts  utilities.ts
src/test/data/: config.toml  formatted1.smk  formatted3.smk  toFormat1.smk  toFormat2Result.smk
src/test/python_tests/: requirements.in  requirements.txt  test_path_specialization.py  test_server.py
src/test/python_tests/lsp_test_client/: session.py  utils.py
src/test/python_tests/test_data/linting/: test1.smk  test2.smk  test3.smk  test4.smk  test5.smk  test6.smk
src/test/python_tests/test_data/sample1/: formatted.smk
src/test/python_tests/test_data/sample2/: config.toml
src/test/python_tests/test_data/sample3/: formatted.smk
src/test/suite/: extension.test.ts
